RESOLVED FIXED264534
REGRESSION(269859@main): Caused CPU spins in some WebView client applications
https://bugs.webkit.org/show_bug.cgi?id=264534
Summary REGRESSION(269859@main): Caused CPU spins in some WebView client applications
WebKit Commit Bot
Reported 2023-11-09 16:24:48 PST
https://commits.webkit.org/269859@main introduced a regression: Caused CPU spins in some WebView client applications This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 269859@main (6.68 KB, patch)
2023-11-09 16:24 PST, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2023-11-09 16:24:53 PST
Created attachment 468546 [details] REVERT of 269859@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2023-11-09 16:30:56 PST
Committed 270489@main (927b1ffbab10): <https://commits.webkit.org/270489@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468546 [details].
Radar WebKit Bug Importer
Comment 3 2023-11-09 16:32:14 PST
Andrey Piskov
Comment 4 2023-11-23 04:37:19 PST
Any chance the fix can be expedited into macOS? Sonoma beta is trashing battery in 1-2 hours because of this. To make matters worse: > AppleSeed News Thanksgiving Break > Please note that our team will not be processing feedback during our Thanksgiving Break, November 18th through November 26th. Please continue to submit your feedback. We will process new feedback and respond to any inquiries when we return to the office on November 27th.
Simon Fraser (smfr)
Comment 5 2023-11-27 10:16:49 PST
What apps are you seeing this with in Sonoma beta?
Andrey Piskov
Comment 6 2023-11-27 11:31:52 PST
(In reply to Simon Fraser (smfr) from comment #5) > What apps are you seeing this with in Sonoma beta? 1. Mail app. Though it’s tricky to reproduce: guess, it’s related to some specific HTML emails. But after a while it most definitely settles with 100% cpu usage — I keep quit the app after reading emails because of this. 2. The best candidate to illustrate this regression is Outline VPN client: just starting the app (without any vpn connection, just opening it is enough) immediately sends it to 99.7% cpu usage. https://github.com/Jigsaw-Code/outline-client/issues/1786#issuecomment-1820868430 https://itunes.apple.com/us/app/outline-app/id1356178125 (Unfortunately, I don’t remember the dev discussion for some another app that traced the issue right to this specific regression — that’s how I ended on this page).
Andrey Piskov
Comment 7 2023-11-27 11:40:09 PST
Found it: another app is f.lux. Here’s the discussion that brought me here: https://forum.justgetflux.com/topic/8491/sonoma-14-2-beta-3-100-cpu/2
Note You need to log in before you can comment on or make changes to this bug.