Cherry-pick 927b1ffbab10. rdar://118024764

Unreviewed, reverting 269859@main.
    https://bugs.webkit.org/show_bug.cgi?id=264534

    Caused CPU spins in some WebView client applications

    Reverted changeset:

    "REGRESSION (263917@main): [ macOS ] 3 inspector/timeline/timeline-event-Timer tests are a consistent failure"
    https://bugs.webkit.org/show_bug.cgi?id=260360
    https://commits.webkit.org/269859@main

    Canonical link: https://commits.webkit.org/270489@main

Canonical link: https://commits.webkit.org/267815.562@safari-7617.1.17.10-branch