Source/WebCore/platform/RunLoopObserver.h
@@ -47,7 +47,6 @@ public:
 
     enum class WellKnownOrder : uint8_t {
         GraphicsCommit,
-        PostGraphicsCommit,
         RenderingUpdate,
         ActivityStateChange,
         InspectorFrameBegin,
